# astroquant-os

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
docs/: 000_MASTER_SPEC.md  001_FOUNDER_VISION_and_002_PRD.md  003_008_009_010_012_ENGINE_DOCS.md  004_AGENT_ARCHITECTURE.md  005_DATA_PLATFORM.md  006_DATABASE_DESIGN.md  007_RESEARCH_METHODOLOGY.md  011_PAPER_TRADING_BACKEND.md  013_IMPLEMENTATION_ROADMAP.md  README.md  VERIFICATION_ADDENDUM.md
migrations/: env.py
migrations/versions/: 0001_initial.py
python/astroquant/: cli.py
python/astroquant/agents/: base.py
python/astroquant/analysis/: __init__.py  chart.py  indicators.py  narrative.py  stock.py
python/astroquant/api/: __init__.py  app.py  dashboard.py
python/astroquant/collectors/: astronomy.py  gann.py  market.py
python/astroquant/common/: config.py
python/astroquant/db/: models.py  repo.py  session.py
python/astroquant/features/: factory.py
python/astroquant/fund/: __init__.py  evolve.py  portfolio.py  run.py  strategy.py
python/astroquant/genome/: __init__.py  knowledge.py  (+1 more)
scripts/: build_preview.py  fetch_universe.py  push_to_github.sh  run_astronomy.py  run_research.py
sql/: 001_extensions.sql  002_hypertables.sql
tests/: test_analysis.py  test_api.py  test_astronomy.py  test_chart.py  test_costs_and_sanity.py  test_db.py  test_features.py  test_fund.py  test_gann.py  test_genome.py  test_india_sources.py  test_lab.py  test_options.py  test_paper.py  test_research.py  test_universe.py
(+29 files in other folders)
