[project]
name = "astroquant"
version = "0.1.0"
description = "AstroQuant OS — a research lab that scientifically tests astro/Gann/technical/sentiment/macro signals on Indian markets."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pandas>=2.2",
    "polars>=0.20",
    "numpy>=1.26",
    "pyswisseph>=2.10",      # Swiss Ephemeris (AGPL — see docs/VERIFICATION_ADDENDUM.md)
    "redis>=5.0",
    "pymongo>=4.6",
    "structlog>=24.1",
    "typer>=0.12",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]      # free fallback source for indices (testing / cross-check)
ml   = ["scikit-learn>=1.4", "xgboost>=2.0", "lightgbm>=4.3", "shap>=0.45"]
dev  = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
astroquant = "astroquant.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
